--- a/app/certificate.html
+++ b/app/certificate.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/certificate.css">
     </head>
     <body>
-        <img src="/assets/img/cert.png">
-        <div class="name">Emmanuel Lodovice</div>
+        <img src="/assets/img/cert.png" class="hidden">
+        <div class="name" id="name"></div>
+        <script src="/assets/js/jquery.js"></script>
         <script src="/assets/js/cert.js"></script>
     </body>
 </html>
