updated og meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="DevFest GDG Cebu 2016 Certificate">
         <meta name="keywords" content="devfest, gdg, certificate">
         <meta name="theme-color" content="#2196f3">
+        <meta property="og:site_name" content="DevFest GDG Cebu 2016 Certificate">
+        <meta property="og:image" content="/assets/img/philippines-map.png" />
         <link rel="shortcut icon" href="/assets/img/favivon-32.png">
         <title>GDG DevFest Cebu 2016 Certificate</title>
         <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
