renamed css file

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
         <meta property="og:image" content="/assets/img/philippines-map.png" />
         <link rel="shortcut icon" href="/assets/img/favivon-32.png">
         <title>GDG DevFest Cebu 2016 Certificate</title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
+        <link rel="stylesheet" type="text/css" href="/assets/css/home.css">
     </head>
     <body>
         <div class="main-content">
@@ -22,6 +22,7 @@
                 <input name="order" placeholder="Order #" autofocus class="center">
                 <button class="gen-button center">Get Certificate</button>
             </form>
+            <a href=""><button class="gen-button center">I am a volunteer</button></a>
         </div>
         <script src="/assets/js/jquery.js"></script>
         <script src="/assets/js/login.js"></script>
