--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,10 @@
                 <input name="order" placeholder="Order #" autofocus class="center">
                 <button class="gen-button center">Get Certificate</button>
             </form>
-            <a href=""><button class="gen-button center">I am a volunteer</button></a>
+            <div class="others">
+                <a href="/volunteers.html">I am a volunteer</a>
+                <a href="">Walk-in & Others</a>
+            </div>
         </div>
         <script src="/assets/js/jquery.js"></script>
         <script src="/assets/js/login.js"></script>
