updated volunteer list

--- a/app/volunteers.html
+++ b/app/volunteers.html
@@ -22,6 +22,7 @@
         </div>
         <script src="/assets/js/jquery.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+        <script src="/assets/js/firebase_config.js"></script>
         <script src="/assets/js/volunteers.js"></script>
     </body>
 </html>
