made walk-in page work

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
             </form>
             <div class="others">
                 <a href="/volunteers.html">I am a volunteer</a>
-                <a href="">Walk-in & Others</a>
+                <a href="/walk_in.html">Walk-in & Others</a>
             </div>
         </div>
         <script src="/assets/js/jquery.js"></script>
