--- a/app/volunteer_cert.html
+++ b/app/volunteer_cert.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/certificate.css">
     </head>
     <body>
-        <img src="/assets/img/cert.jpg" class="hidden">
+        <img src="/assets/img/vol_cert.jpg" class="hidden">
         <div class="name" id="name"></div>
+
         <script src="/assets/js/jquery.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
         <script src="/assets/js/firebase_config.js"></script>
-        <script src="/assets/js/cert.js"></script>
+        <script src="/assets/js/volunteer_cert.js"></script>
     </body>
 </html>
