--- a/app/index.html
+++ b/app/index.html
@@ -7,25 +7,22 @@
         <meta name="description" content="DevFest GDG Cebu 2016 Certificate">
         <meta name="keywords" content="devfest, gdg, certificate">
         <meta name="theme-color" content="#2196f3">
-        <meta property="og:site_name" content="DevFest GDG Cebu 2016 Certificate">
-        <meta property="og:image" content="/assets/img/philippines-map.png" />
+        <meta property="og:site_name" content="GDG Cebu Code Camp 2017 Certificate">
+        <meta property="og:image" content="/assets/img/background.png" />
         <link rel="shortcut icon" href="/assets/img/favivon-32.png">
-        <title>GDG DevFest Cebu 2016 Certificate</title>
+        <title>GDG Cebu Code Camp 2017</title>
+        <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/assets/css/home.css">
     </head>
     <body>
         <div class="main-content">
-            <img src="/assets/img/gdg-cebu-logo-white.png" class="event-logo"/>
+            <img src="/assets/img/background.png" class="event-logo"/>
             <form action="/certificate.html">
-                <p class="note center">The order # is in your eventbrite ticket :)</p>
+                <p class="note center">The order # is in your eventbrite ticket</p>
                 <p class="error center hidden"></p>
                 <input name="order" placeholder="Order #" autofocus class="center">
                 <button class="gen-button center">Get Certificate</button>
             </form>
-            <div class="others">
-                <a href="/volunteers.html">I am a volunteer</a>
-                <a href="/walk_in.html">Walk-in & Others</a>
-            </div>
         </div>
         <script src="/assets/js/jquery.js"></script>
         <script src="/assets/js/login.js"></script>
