fixed meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="GDG Cebu">
-        <meta name="description" content="DevFest GDG Cebu 2016 Certificate">
-        <meta name="keywords" content="devfest, gdg, certificate">
+        <meta name="description" content="GDG Cebu Code Camp 2017 Certificate">
+        <meta name="keywords" content="codecamp, gdg, certificate">
         <meta name="theme-color" content="#2196f3">
         <meta property="og:site_name" content="GDG Cebu Code Camp 2017 Certificate">
         <meta property="og:image" content="/assets/img/background.png" />
