updated page metas

--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="GDG Cebu">
-        <meta name="description" content="GDG Cebu Code Camp 2017 Certificate">
-        <meta name="keywords" content="codecamp, gdg, certificate">
+        <meta name="description" content="GDG Cebu Certificate">
+        <meta name="keywords" content="gdg, certificate">
         <meta name="theme-color" content="#2196f3">
-        <meta property="og:site_name" content="GDG Cebu Code Camp 2017 Certificate">
-        <meta property="og:image" content="/assets/img/background.png" />
+        <meta property="og:image" content="/assets/img/favivon-32.png">
+        <meta property="og:site_name" content="GDG Cebu Certificate">
         <link rel="shortcut icon" href="/assets/img/favivon-32.png">
-        <title>GDG Cebu Code Camp 2017</title>
+        <title>GDG Cebu Certificates</title>
         <!-- <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"> -->
         <link rel="stylesheet" type="text/css" href="/assets/css/home.css">
     </head>
