--- a/app/certificate.html
+++ b/app/certificate.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>GDG Cebu Code Camp 2017</title>
+        <title>GDG Cebu Certificate</title>
         <link rel="stylesheet" type="text/css" href="/assets/css/certificate.css">
     </head>
     <body>
