made feedback link open a new tab

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <div class="main-content hidden vert-center">
             <img src="" class="event-logo"/>
             <form action="/certificate.html">
-                <p class="center note hidden" id="feedback">Help us improve next time, Cebu! If you haven't answered the feedback form, answer it here: <a href="#">#</a></p>
+                <p class="center note hidden" id="feedback">Help us improve next time, Cebu! If you haven't answered the feedback form, answer it here: <a href="#" target="_blank">#</a></p>
                 <p class="note center">The order # is in your eventbrite ticket</p>
                 <p class="error center hidden" id="error-container"></p>
                 <input name="order" placeholder="Order #" autofocus class="center">
