--- a/app/certificate.html
+++ b/app/certificate.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/certificate.css">
     </head>
     <body>
-        <img src="/assets/img/cert.jpg" class="hidden">
+        <img src="" class="hidden">
         <div class="name" id="name"></div>
         <script src="/assets/js/jquery.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
