Added new cert image

--- a/app/wtm2018.html
+++ b/app/wtm2018.html
@@ -24,5 +24,7 @@
                 <button class="gen-button center">Get Certificate</button>
             </form>
         </div>
+        <script src="/assets/js/jquery.js"></script>
+        <script src="/assets/js/wtm2018.js"></script>
     </body>
 </html>
