--- a/app/wtm2018_cert.html
+++ b/app/wtm2018_cert.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/certificate.css">
     </head>
     <body>
-        <img src="/assets/img/cert/io2017.jpg" class="hidden">
-        <div class="name" id="name"></div>
+        <img src="/assets/img/cert/wtm2018.jpeg" class="hidden">
+        <div class="name" id="name" style="top:420px"></div>
 
         <script src="/assets/js/jquery.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
